fixed issue #3: Documentation font too light

--- a/stylesheets/base/_docs_type.scss
+++ b/stylesheets/base/_docs_type.scss
@@ -69,7 +69,7 @@ li {
   font-size: 18px;
   line-height: 22px;
   font-weight: 300;
-  color: lighten($base-font-color, 20);
+  color: lighten($base-font-color, 10);
   margin: 10px 0;
   text-decoration: none;
 }
